--- a/contactform.html
+++ b/contactform.html
@@ -10,7 +10,7 @@
   <p>8218035988</p>
   <p>shubhamchamoli8218035988@gmail.com</p>
 <hr>
-  <form action""="https://www.k8oms.net/links/mailto-link" method="post" enctype="text/plain">
+  <form>
     <label>Your Name :</label>
     <input type="text" name "" value=""><br />
     <label>Your email :</label>
