--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 
       </table>
       <hr>
-      <a href="Contactform.html"><h>
-        contact form</h></a>
+      <a href="contactform.html"><h>
+      HOBBIES</h></a>
       <hr>
 
 
