--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 </head>
 
 <body>
+   <link rel="icon" href= "favicon.ico" >
   <table cellspacing="2">
     <td>
-      <<img src="download.jpg" alt="shubham profile image"
+      <img src="download.jpg" alt="shubham profile image"
     </td>
     <td>
       <h1> shubham chamoli</a></h1>
